<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="se.uu.csproject.monadclient.RouteConfirmPopup"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:layout_centerInParent="true"
    android:layout_centerVertical="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:background="@color/primaryColor"
    android:id="@+id/relativelayout1">


    <TextView
        android:text="@string/label_trip_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp" />

    <TextView
        android:text="@string/label_trip_depart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp" />

    <TextView
        android:text="@string/label_trip_departName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp" />

    <TextView
        android:text="@string/label_trip_arrive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp" />

    <TextView
        android:text="@string/label_trip_ariveName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp" />

    <TextView
        android:text="@string/label_trip_busInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_trips_tv_back"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="175dp"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:autoLink="web"
        android:id="@+id/tv_link_trip_back" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_trip_button_confirm"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/button_trip_confirm" />


</RelativeLayout>
