<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.uu.csproject.monadclient.tripDetails">

    <include
        android:id="@+id/actionToolBar"
        layout="@layout/app_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionToolBar">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:scaleType="fitXY"
            android:id="@+id/google_maps"
            android:src="@drawable/googlemaps" />

        <Button
            android:layout_width="150dp"
            android:layout_height="65dp"
            android:text="@string/label_trips_button_join"
            android:id="@+id/btn_join_trips"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/google_maps"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/btn_join_trips">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_directions_walk_black_24dp" />

                <TextView
                    android:text="@string/label_trips_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textColor="?attr/colorAccent" />

                <TextView
                    android:text="@string/label_trips_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:textColor="?attr/colorAccent" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_directions_bus_black_18dp" />

                <TextView
                    android:text="@string/label_trips_info2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textColor="?attr/colorAccent" />

                <TextView
                    android:text="@string/label_trips_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:textColor="?attr/colorAccent" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_directions_walk_black_18dp" />

                <TextView
                    android:text="@string/label_trips_info3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textColor="?attr/colorAccent" />

                <TextView
                    android:text="@string/label_trips_time2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:textColor="?attr/colorAccent" />

            </TableRow>

        </TableLayout>

    </RelativeLayout>

</RelativeLayout>
